--- a/css/style.less
+++ b/css/style.less
@@ -89,11 +89,53 @@ html, body {
   height: 300px;
   padding: 10px;
 }
+.project.active {
+  width: 100%;
+  height: 500px;
+}
 .project-content {
   height: 100%;
   width: 100%;
   background-color: white;
   border: 1px solid #e7e7e7;
+  background-image: url('../brokenglass.png');
+  background-size: 100%;
+  overflow: hidden;
+}
+.project-content .description {
+  position: relative;
+  padding: 15px;
+  background-color: rgba(250, 250, 250, .5);
+}
+.item1 .project-content .description {
+  width: 100%;
+  top: 100%;
+  transition: top .3s;
+  height: 100%;
+}
+.item1 .project-content:hover .description {
+  position: relative;
+  top: 50%;
+}
+.item2 .project-content .description {
+  width: 40%;
+  right: 40%;
+  transition: right .3s;
+  height: 100%;
+}
+.item2 .project-content:hover .description {
+  position: relative;
+  right: 0%;
+}
+.item3 .project-content .description {
+  width: 40%;
+  right: 40%;
+  transition: right .3s;
+  height: 100%;
+}
+.item3 .project-content:hover .description {
+  position: relative;
+  right: 0%;
 }
 .item0 {
 
