--- a/css/style.less
+++ b/css/style.less
@@ -89,6 +89,16 @@ html, body {
   height: 300px;
   padding: 10px;
 }
+/*@media (min-width: 400px) {
+  .project {
+    height: 200px;
+  }
+}
+@media (min-width: 768px) {
+  .project {
+    height: 300px;
+  }
+}*/
 .project.active {
   width: 100%;
   height: 500px;
@@ -102,10 +112,34 @@ html, body {
   background-size: 100%;
   overflow: hidden;
 }
+.desc-bg-container {
+  width: 0%;
+  margin-right: 0%;
+  //left: -40%;
+  height: 100%;
+  top: -100%;
+  position: relative;
+  overflow: hidden;
+  transition: width 0.3s;
+}
+.desc-bg {
+  height: 100%;
+  width: 250%;
+  position: relative;
+  background-size: 100%;
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
+  filter: blur(10px);
+}
+.description {
+  z-index: 1;
+}
 .project-content .description {
   position: relative;
   padding: 15px;
-  background-color: rgba(250, 250, 250, .5);
+  background-color: rgba(250, 250, 250, .2);
 }
 .item1 .project-content .description {
   width: 100%;
@@ -126,6 +160,10 @@ html, body {
 .item2 .project-content:hover .description {
   position: relative;
   right: 0%;
+}
+.item2 .project-content:hover .desc-bg-container {
+  width: 40%;
+  margin-right: 60%;
 }
 .item3 .project-content .description {
   width: 40%;
