--- a/css/style.less
+++ b/css/style.less
@@ -113,18 +113,11 @@ html, body {
   overflow: hidden;
 }
 .desc-bg-container {
-  width: 0%;
-  margin-right: 0%;
-  //left: -40%;
-  height: 100%;
-  top: -100%;
   position: relative;
   overflow: hidden;
   transition: width 0.3s;
 }
 .desc-bg {
-  height: 100%;
-  width: 250%;
   position: relative;
   background-size: 100%;
   -webkit-filter: blur(10px);
@@ -132,6 +125,29 @@ html, body {
   -o-filter: blur(10px);
   -ms-filter: blur(10px);
   filter: blur(10px);
+}
+.item1 .desc-bg-container {
+  width: 100%;
+  margin-top: 280px;
+  height: 0px;
+  top: -50%;
+  transition:top 0.3s, margin 0.3s;
+}
+.item2 .desc-bg-container {
+  width: 0%;
+  margin-right: 0%;
+  height: 100%;
+  top: -100%;
+}
+.item1 .desc-bg {
+  height: 280px;
+  top: -280px;
+  width: 100%;
+  transition:top 0.3s
+}
+.item2 .desc-bg {
+  height: 100%;
+  width: 250%;
 }
 .description {
   z-index: 1;
@@ -145,11 +161,18 @@ html, body {
   width: 100%;
   top: 100%;
   transition: top .3s;
-  height: 100%;
+  height: 50%;
 }
 .item1 .project-content:hover .description {
   position: relative;
   top: 50%;
+}
+.item1 .project-content:hover .desc-bg-container {
+  margin-top: 140px;
+  height: 140px;
+}
+.item1 .project-content:hover .desc-bg {
+  top: -140px;
 }
 .item2 .project-content .description {
   width: 40%;
