--- a/css/style.less
+++ b/css/style.less
@@ -126,26 +126,13 @@ html, body {
   -ms-filter: blur(10px);
   filter: blur(10px);
 }
-.item1 .desc-bg-container {
-  width: 100%;
-  margin-top: 280px;
-  height: 0px;
-  top: -50%;
-  transition:top 0.3s, margin 0.3s;
-}
-.item2 .desc-bg-container {
+.desc-bg-container {
   width: 0%;
   margin-right: 0%;
   height: 100%;
   top: -100%;
 }
-.item1 .desc-bg {
-  height: 280px;
-  top: -280px;
-  width: 100%;
-  transition:top 0.3s
-}
-.item2 .desc-bg {
+.desc-bg {
   height: 100%;
   width: 250%;
 }
@@ -154,25 +141,22 @@ html, body {
 }
 .project-content .description {
   position: relative;
-  padding: 15px;
+  padding: 20px;
   background-color: rgba(250, 250, 250, .2);
 }
 .item1 .project-content .description {
-  width: 100%;
-  top: 100%;
-  transition: top .3s;
-  height: 50%;
+  width: 60%;
+  right: 60%;
+  transition: right .3s;
+  height: 100%;
 }
 .item1 .project-content:hover .description {
   position: relative;
-  top: 50%;
+  right: 0%;
 }
 .item1 .project-content:hover .desc-bg-container {
-  margin-top: 140px;
-  height: 140px;
-}
-.item1 .project-content:hover .desc-bg {
-  top: -140px;
+  width: 60%;
+  margin-right: 60%;
 }
 .item2 .project-content .description {
   width: 40%;
@@ -197,6 +181,11 @@ html, body {
 .item3 .project-content:hover .description {
   position: relative;
   right: 0%;
+}
+.active .description {
+  //width: 30%!important;
+  //right: 0%!important;
+  //height: 100%!important;
 }
 .item0 {
 
