--- a/css/style.less
+++ b/css/style.less
@@ -156,7 +156,7 @@ html, body {
 }
 .item1 .project-content:hover .desc-bg-container {
   width: 60%;
-  margin-right: 60%;
+  margin-right: 40%;
 }
 .item2 .project-content .description {
   width: 40%;
@@ -182,10 +182,13 @@ html, body {
   position: relative;
   right: 0%;
 }
-.active .description {
-  //width: 30%!important;
-  //right: 0%!important;
-  //height: 100%!important;
+.actdive .description, .active-desc {
+  width: 30%!important;
+  right: 0%!important;
+}
+.actdive .desc-bg-container, .active-desc-bg-container {
+  width: 30%!important;
+  margin-right: 70%!important;
 }
 .item0 {
 
