adds clickable class to description boxes

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,9 @@ body {
   transition: right .3s;
   height: 100%;
 }
+.clickable:hover {
+  cursor: pointer;
+}
 .item1 .project-content:hover .description {
   position: relative;
   right: 0%;
