--- a/css/style.less
+++ b/css/style.less
@@ -150,6 +150,9 @@ html, body {
   transition: right .3s;
   height: 100%;
 }
+.clickable:hover {
+  cursor: pointer;
+}
 .item1 .project-content:hover .description {
   position: relative;
   right: 0%;
