use pre-blurred images

--- a/css/style.less
+++ b/css/style.less
@@ -120,11 +120,11 @@ html, body {
 .desc-bg {
   position: relative;
   background-size: 100%;
-  -webkit-filter: blur(10px);
-  -moz-filter: blur(10px);
-  -o-filter: blur(10px);
-  -ms-filter: blur(10px);
-  filter: blur(10px);
+  //-webkit-filter: blur(10px);
+  //-moz-filter: blur(10px);
+  //-o-filter: blur(10px);
+  //-ms-filter: blur(10px);
+  //filter: blur(10px);
 }
 .desc-bg-container {
   width: 0%;
