--- a/css/style.less
+++ b/css/style.less
@@ -185,11 +185,12 @@ html, body {
   position: relative;
   right: 0%;
 }
-.actdive .description, .active-desc {
+.active-desc {
   width: 30%!important;
   right: 0%!important;
+  overflow-y:auto!important;
 }
-.actdive .desc-bg-container, .active-desc-bg-container {
+.active-desc-bg-container {
   width: 30%!important;
   margin-right: 70%!important;
 }
@@ -204,6 +205,44 @@ html, body {
 }
 .item3 {
 
+}
+.gallery {
+  //display: none;
+  opacity: 0;
+  transition: all 0.4s;
+  width: 70%;
+  height: 100%;
+  position: relative;
+  top: -200%;
+  left: 30%;
+  overflow: auto;
+  //z-index: 1;
+}
+.active .gallery {
+  //display: block;
+  opacity: 1;
+  //height: 478px;
+}
+.galPic {
+  //display: none;
+  position: relative;
+  left: 1%;
+  top: 1%;
+  margin-top:1%;
+  margin-bottom:1%;
+  height: 96%;
+  width: 95%;
+  margin-left: 2%;
+  margin-right: 2%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.galPic:first-of-type {
+  display: block;
+}
+#painting.active .desc-bg-container {
+  width:100%!important;
 }
 #contact-container {
   background-color: @main-color;
