--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   font-family: FontAwesome;
   src: url("../font/fontawesome-webfont.ttf");
 }
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../font/fontawesome-webfont.eot?') format('eot'), url('../font/fontawesome-webfont.woff') format('woff'), url('../font/fontawesome-webfont.ttf') format('truetype');
+}
 html,
 body {
   height: 100%;
@@ -133,7 +137,7 @@ body {
   transition: right .3s;
   height: 100%;
 }
-.clickable:hover {
+.clickable:not(.active):hover {
   cursor: pointer;
 }
 .item1 .project-content:hover .description {
@@ -185,17 +189,16 @@ body {
   position: relative;
   top: -200%;
   left: 30%;
-  overflow: auto;
 }
 .active .gallery {
   opacity: 1;
+  background-color: rgba(250, 250, 250, 0.2);
 }
 .galPic {
+  display: none;
   position: relative;
   left: 1%;
-  top: 1%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  top: 2%;
   height: 96%;
   width: 95%;
   margin-left: 2%;
@@ -209,6 +212,35 @@ body {
 }
 #painting.active .desc-bg-container {
   width: 100%!important;
+}
+#fall.active .desc-bg-container {
+  width: 100%!important;
+}
+.gal-btn {
+  font-family: FontAwesome;
+  position: absolute;
+  top: 50%;
+  font-size: 100px;
+  line-height: 102px;
+  margin-top: -51px;
+  width: 36px;
+  height: 102px;
+}
+.gal-btn:hover {
+  cursor: pointer;
+  color: #f5f5f5;
+}
+.left-button {
+  left: 10px;
+}
+.left-button:before {
+  content: "\f104";
+}
+.right-button {
+  right: 10px;
+}
+.right-button:before {
+  content: "\f105";
 }
 #contact-container {
   background-color: #52b74f;
