--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,10 @@ body {
   background-color: white;
   border: 1px solid #e7e7e7;
   background-image: url('../brokenglass.png');
-  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   overflow: hidden;
 }
 .desc-bg-container {
@@ -111,7 +114,10 @@ body {
 }
 .desc-bg {
   position: relative;
-  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .desc-bg-container {
   width: 0%;
@@ -129,7 +135,8 @@ body {
 .project-content .description {
   position: relative;
   padding: 20px;
-  background-color: rgba(250, 250, 250, 0.2);
+  background-color: rgba(120, 120, 120, 0.4);
+  color: white;
 }
 .item1 .project-content .description {
   width: 60%;
@@ -192,7 +199,7 @@ body {
 }
 .active .gallery {
   opacity: 1;
-  background-color: rgba(250, 250, 250, 0.2);
+  background-color: rgba(120, 120, 120, 0.4);
 }
 .galPic {
   display: none;
@@ -203,6 +210,9 @@ body {
   width: 95%;
   margin-left: 2%;
   margin-right: 2%;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -210,10 +220,9 @@ body {
 .galPic:first-of-type {
   display: block;
 }
-#painting.active .desc-bg-container {
-  width: 100%!important;
-}
-#fall.active .desc-bg-container {
+#painting.active .desc-bg-container,
+#fall.active .desc-bg-container,
+#ny.active .desc-bg-container {
   width: 100%!important;
 }
 .gal-btn {
@@ -225,6 +234,8 @@ body {
   margin-top: -51px;
   width: 36px;
   height: 102px;
+  color: #808080;
+  text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.5);
 }
 .gal-btn:hover {
   cursor: pointer;
