--- a/css/style.less
+++ b/css/style.less
@@ -113,7 +113,10 @@ html, body {
   background-color: white;
   border: 1px solid #e7e7e7;
   background-image: url('../brokenglass.png');
-  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   overflow: hidden;
 }
 .desc-bg-container {
@@ -123,7 +126,10 @@ html, body {
 }
 .desc-bg {
   position: relative;
-  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   //-webkit-filter: blur(10px);
   //-moz-filter: blur(10px);
   //-o-filter: blur(10px);
@@ -146,7 +152,8 @@ html, body {
 .project-content .description {
   position: relative;
   padding: 20px;
-  background-color: rgba(250, 250, 250, .2);
+  background-color: rgba(120, 120, 120, 0.4);
+  color: white;
 }
 .item1 .project-content .description {
   width: 60%;
@@ -226,7 +233,7 @@ html, body {
 .active .gallery {
   //display: block;
   opacity: 1;
-  background-color: rgba(250, 250, 250, 0.2);
+  background-color: rgba(120, 120, 120, 0.4);
   //height: 478px;
 }
 .galPic {
@@ -240,6 +247,9 @@ html, body {
   width: 95%;
   margin-left: 2%;
   margin-right: 2%;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -247,10 +257,7 @@ html, body {
 .galPic:first-of-type {
   display: block;
 }
-#painting.active .desc-bg-container {
-  width:100%!important;
-}
-#fall.active .desc-bg-container {
+#painting.active .desc-bg-container, #fall.active .desc-bg-container, #ny.active .desc-bg-container {
   width:100%!important;
 }
 .gal-btn {
@@ -262,6 +269,8 @@ html, body {
   margin-top: -51px;
   width: 36px;
   height: 102px;
+  color: #808080;
+  text-shadow: 2px 1px 3px rgba(0,0,0,0.5);
 }
 .gal-btn:hover {
   cursor: pointer;
