add prebirth and stopmotionclub pages

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: 'Alegreya Sans', sans-serif;
 }
 #nav {
   margin-bottom: 0px;
@@ -130,13 +131,20 @@ body {
   width: 250%;
 }
 .description {
-  z-index: 1;
-}
-.project-content .description {
   position: relative;
   padding: 20px;
   background-color: rgba(120, 120, 120, 0.4);
   color: white;
+  z-index: 1;
+  font-size: 20px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+.description > div {
+  font-size: 40px;
+  color: #43b117;
+}
+.description a {
+  color: #87cf6b;
 }
 .item1 .project-content .description {
   width: 60%;
@@ -201,6 +209,27 @@ body {
   opacity: 1;
   background-color: rgba(120, 120, 120, 0.4);
 }
+.active .gallery iframe {
+  display: block;
+}
+.gallery iframe {
+  display: none;
+  border: 0px;
+  position: relative;
+  left: 1%;
+  top: 2%;
+  height: 128%;
+  width: 126.6666%;
+  margin-left: 2%;
+  margin-right: 2%;
+  zoom: 0.5;
+  -moz-transform: scale(0.75);
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(0.75);
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(0.75);
+  -webkit-transform-origin: 0 0;
+}
 .galPic {
   display: none;
   position: relative;
@@ -222,7 +251,8 @@ body {
 }
 #painting.active .desc-bg-container,
 #fall.active .desc-bg-container,
-#ny.active .desc-bg-container {
+#ny.active .desc-bg-container,
+.active .desc-bg-container {
   width: 100%!important;
 }
 .gal-btn {
