make blurred image backgrounds inline css

--- a/css/style.less
+++ b/css/style.less
@@ -286,7 +286,7 @@ html, body {
 .galPic:first-of-type {
   display: block;
 }
-#painting.active .desc-bg-container, #fall.active .desc-bg-container, #ny.active .desc-bg-container, .active .desc-bg-container {
+#paint.active .desc-bg-container, #fall.active .desc-bg-container, #ny.active .desc-bg-container, .active .desc-bg-container {
   width:100%!important;
 }
 .gal-btn {
