--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ body {
 .galPic:first-of-type {
   display: block;
 }
-#painting.active .desc-bg-container,
+#paint.active .desc-bg-container,
 #fall.active .desc-bg-container,
 #ny.active .desc-bg-container,
 .active .desc-bg-container {
