add notification if no projects showing

--- a/css/style.less
+++ b/css/style.less
@@ -94,6 +94,21 @@ html, body {
   height: 300px;
   padding: 10px;
 }
+.noproject {
+  display: none;
+  padding: 20px;
+  background-color: white;
+  text-align: center;
+  font-size: 20px;
+  border: 1px solid #e7e7e7;
+  margin-top:20px;
+  margin-bottom:20px;
+}
+.up-arrow:before {
+  content: "\f139";
+  font-family:fontawesome;
+  font-size:30px;
+}
 /*@media (min-width: 400px) {
   .project {
     height: 200px;
