--- a/css/style.less
+++ b/css/style.less
@@ -25,7 +25,9 @@ html, body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: 'Alegreya Sans', sans-serif;
+  //font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  //text-transform:lowercase;
 }
 #nav {
   margin-bottom: 0px;
@@ -173,14 +175,15 @@ html, body {
 }
 .description > div {
   font-size: 40px;
+  //word-break:break-all;
   color: @main-dark-color;
 }
 .description a {
   color: @main-light-color;
 }
 .item1 .project-content .description {
-  width: 70%;
-  right: 70%;
+  width: 90%;
+  right: 90%;
   transition: right .3s;
   height: 100%;
 }
@@ -192,8 +195,8 @@ html, body {
   right: 0%;
 }
 .item1 .project-content:hover .desc-bg-container {
-  width: 70%;
-  margin-right: 30%;
+  width: 90%;
+  margin-right: 10%;
 }
 .item2 .project-content .description {
   width: 40%;
