--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: 'Alegreya Sans', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 #nav {
   margin-bottom: 0px;
@@ -162,8 +162,8 @@ body {
   color: #87cf6b;
 }
 .item1 .project-content .description {
-  width: 70%;
-  right: 70%;
+  width: 90%;
+  right: 90%;
   transition: right .3s;
   height: 100%;
 }
@@ -175,8 +175,8 @@ body {
   right: 0%;
 }
 .item1 .project-content:hover .desc-bg-container {
-  width: 70%;
-  margin-right: 30%;
+  width: 90%;
+  margin-right: 10%;
 }
 .item2 .project-content .description {
   width: 40%;
