--- a/css/style.less
+++ b/css/style.less
@@ -27,7 +27,7 @@ html, body {
   user-select: none;
   //font-family: 'Josefin Sans', sans-serif;
   font-family: 'Quicksand', sans-serif;
-  //text-transform:lowercase;
+  text-transform:lowercase;
 }
 #nav {
   margin-bottom: 0px;
@@ -95,6 +95,7 @@ html, body {
 .project {
   height: 300px;
   padding: 10px;
+  //transition: all 2s;
 }
 .noproject {
   display: none;
