--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   -ms-user-select: none;
   user-select: none;
   font-family: 'Quicksand', sans-serif;
+  text-transform: lowercase;
 }
 #nav {
   margin-bottom: 0px;
