--- a/css/style.less
+++ b/css/style.less
@@ -83,7 +83,7 @@ html, body {
 }
 #project-toggles .active {
   color: @main-dark-color;
-  //text-shadow: 1px 0px 0px @main-dark-color;
+  text-shadow: 0.5px 0px 0px @main-dark-color;
 }
 #project-toggles .active:hover {
   //color: @main-light-color;
@@ -98,7 +98,8 @@ html, body {
   //transition: all 2s;
 }
 .noproject {
-  display: none;
+  //display: none;
+  height: auto;
   padding: 20px;
   background-color: white;
   text-align: center;
