add animation videos

--- a/css/style.less
+++ b/css/style.less
@@ -273,10 +273,13 @@ html, body {
   position: relative;
   left: 1%;
   top: 2%;
-  height: 128%;
-  width: 126.6666%;
+  height: 96%;
+  width: 95%;
   margin-left: 2%;
   margin-right: 2%;
+
+}
+iframe.website {
   zoom: 0.75;
   -moz-transform: scale(0.75);
   -moz-transform-origin: 0 0;
@@ -284,6 +287,8 @@ html, body {
   -o-transform-origin: 0 0;
   -webkit-transform: scale(0.75);
   -webkit-transform-origin: 0 0;
+  height: 128%;
+  width: 126.6666%;
 }
 .galPic {
   display: none;
