no about page, contact section update

--- a/css/style.less
+++ b/css/style.less
@@ -382,3 +382,19 @@ iframe.website {
   display: inline-block;
   padding-left: 30px;
 }
+.email:before {
+  font-family:fontawesome;
+  content: "\f0e0";
+  margin-right: 8px;
+  font-size: 20px;
+}
+.git a, .email a{
+  color: white;
+  font-size: 20px;
+}
+.git:before {
+  font-family:fontawesome;
+  content: "\f092";
+  margin-right: 8px;
+  font-size: 20px;
+}
