--- a/css/style.less
+++ b/css/style.less
@@ -92,10 +92,89 @@ html, body {
 #project-wrapper {
   transition: height ease 0.3s;
 }
-.project {
+#project-wrapper:before {
+  position:absolute;
+  display:block;
+  right: 0px;
+  height: 100%;
+  margin-top: 0%;
+  background: #eeeeee;
+  width: 5px;
+  top: 0px;
+  content: '';
+  z-index: 10;
+}
+#project-wrapper:after {
+  position:absolute;
+  display:block;
+  bottom: 0px;
+  height: 5px;
+  background: #eeeeee;
+  width: 100%;
+  content: '';
+  z-index: 10;
+}
+.project:not(.noproject) {
   height: 300px;
   padding: 10px;
   //transition: all 2s;
+  outline: #eeeeee solid 5px;
+  outline-offset: -2px;
+  //border-right: @main-color solid 12px;
+
+}
+.project-hover {
+  -webkit-transition: background-color 500ms linear;
+  -moz-transition: background-color 500ms linear;
+  -o-transition: background-color 500ms linear;
+  -ms-transition: background-color 500ms linear;
+  transition: background-color 500ms linear;
+  background-color: rgba(135, 207, 107, 0.5);
+}
+.project:not(.noproject):before {
+  /*position:absolute;
+  display:block;
+  top: -3px;
+  height: 5px;
+  background: #eeeeee;
+  width: 100%;
+  left: 0px;
+  content: ''*/
+  position:absolute;
+  display:block;
+  right: -2px;
+  height: 101%;
+  margin-top: 0%;
+  background: @main-color;
+  width: 5px;
+  top: 0px;
+  content: '';
+}
+.project:not(.noproject):after {
+  position:absolute;
+  display:block;
+  bottom: -2px;
+  height: 5px;
+  background: @main-color;
+  width: 100%;
+  margin-left: -1%;
+  left: 0px;
+  content: ''
+}
+.painting {
+  z-index: 0!important;
+}
+.photography{
+  z-index: 1!important;
+}
+.web {
+  z-index: 2!important;
+}
+.animation {
+  z-index: 3!important;
+}
+.film {
+  z-index: 4!important;
 }
 .noproject {
   //display: none;
