no more hacky borders

--- a/css/style.less
+++ b/css/style.less
@@ -93,7 +93,7 @@ html, body {
   transition: height ease 0.3s;
 }
 #project-wrapper:before {
-  position:absolute;
+  /*position:absolute;
   display:block;
   right: 0px;
   height: 100%;
@@ -102,24 +102,24 @@ html, body {
   width: 5px;
   top: 0px;
   content: '';
-  z-index: 10;
+  z-index: 10;*/
 }
 #project-wrapper:after {
-  position:absolute;
+  /*position:absolute;
   display:block;
   bottom: 0px;
   height: 5px;
   background: #eeeeee;
   width: 100%;
   content: '';
-  z-index: 10;
+  z-index: 10;*/
 }
 .project:not(.noproject) {
   height: 300px;
   padding: 10px;
   //transition: all 2s;
-  outline: #eeeeee solid 5px;
-  outline-offset: -2px;
+  //outline: #eeeeee solid 5px;
+  //outline-offset: -2px;
   //border-right: @main-color solid 12px;
 
 }
@@ -140,7 +140,7 @@ html, body {
   width: 100%;
   left: 0px;
   content: ''*/
-  position:absolute;
+  /*position:absolute;
   display:block;
   right: -2px;
   height: 101%;
@@ -148,10 +148,10 @@ html, body {
   background: @main-color;
   width: 5px;
   top: 0px;
-  content: '';
+  content: '';*/
 }
 .project:not(.noproject):after {
-  position:absolute;
+  /*position:absolute;
   display:block;
   bottom: -2px;
   height: 5px;
@@ -159,7 +159,7 @@ html, body {
   width: 100%;
   margin-left: -1%;
   left: 0px;
-  content: ''
+  content: ''*/
 }
 .painting {
   z-index: 0!important;
