--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ body {
   transition: height ease 0.3s;
 }
 #project-wrapper:before {
-  position: absolute;
-  display: block;
+  /*position:absolute;
+  display:block;
   right: 0px;
   height: 100%;
   margin-top: 0%;
@@ -90,23 +90,21 @@ body {
   width: 5px;
   top: 0px;
   content: '';
-  z-index: 10;
+  z-index: 10;*/
 }
 #project-wrapper:after {
-  position: absolute;
-  display: block;
+  /*position:absolute;
+  display:block;
   bottom: 0px;
   height: 5px;
   background: #eeeeee;
   width: 100%;
   content: '';
-  z-index: 10;
+  z-index: 10;*/
 }
 .project:not(.noproject) {
   height: 300px;
   padding: 10px;
-  outline: #eeeeee solid 5px;
-  outline-offset: -2px;
 }
 .project-hover {
   -webkit-transition: background-color 500ms linear;
@@ -125,26 +123,26 @@ body {
   width: 100%;
   left: 0px;
   content: ''*/
-  position: absolute;
-  display: block;
+  /*position:absolute;
+  display:block;
   right: -2px;
   height: 101%;
   margin-top: 0%;
-  background: #52b74f;
+  background: @main-color;
   width: 5px;
   top: 0px;
-  content: '';
+  content: '';*/
 }
 .project:not(.noproject):after {
-  position: absolute;
-  display: block;
+  /*position:absolute;
+  display:block;
   bottom: -2px;
   height: 5px;
-  background: #52b74f;
+  background: @main-color;
   width: 100%;
   margin-left: -1%;
   left: 0px;
-  content: '';
+  content: ''*/
 }
 .painting {
   z-index: 0!important;
