custom webkit scrollbars

--- a/css/style.less
+++ b/css/style.less
@@ -526,3 +526,15 @@ iframe.website {
   -o-transition-duration: 0s;
   transition-duration: 0s;
 }
+
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 30px @main-color;
+}
+.description::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.7);
+}
