--- a/css/style.css
+++ b/css/style.css
@@ -476,3 +476,13 @@ iframe.website {
   -o-transition-duration: 0s;
   transition-duration: 0s;
 }
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 30px #52b74f;
+}
+.description::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.7);
+}
