--- a/css/style.less
+++ b/css/style.less
@@ -27,6 +27,9 @@ html, body {
   user-select: none;
   //font-family: 'Josefin Sans', sans-serif;
   font-family: 'Quicksand', sans-serif;
+
+}
+#greeting, #project-toggles, .noproject, .description > div, .description > a, #contact-container{
   text-transform:lowercase;
 }
 #nav {
