--- a/css/style.less
+++ b/css/style.less
@@ -25,12 +25,14 @@ html, body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  //font-family: 'Josefin Sans', sans-serif;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 300;
+
 
 }
 #greeting, #project-toggles, .noproject, .description > div, .description > a, #contact-container{
   text-transform:lowercase;
+  font-family: 'Quicksand', sans-serif;
 }
 #nav {
   margin-bottom: 0px;
