--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 300;
 }
 #greeting,
 #project-toggles,
@@ -28,6 +29,7 @@ body {
 .description > a,
 #contact-container {
   text-transform: lowercase;
+  font-family: 'Quicksand', sans-serif;
 }
 #nav {
   margin-bottom: 0px;
