--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ body {
   user-select: none;
   font-family: 'Alegreya Sans', sans-serif;
   font-weight: 300;
+  background-color: black;
+  color: lightgray;
 }
 #greeting,
 #project-toggles,
@@ -50,16 +52,23 @@ body {
 }
 #greeting {
   font-size: 25px;
+  color: #808080;
 }
 #hello {
   font-size: 50px;
 }
+.firstname {
+  color: white;
+}
+.lastname {
+  color: #43b117;
+}
 #project-outer-container {
-  background-color: #eeeeee;
+  background-color: #0F0F0F;
   padding-top: 30px;
   padding-bottom: 30px;
-  border-top: 1px solid #dddddd;
-  border-bottom: 1px solid #dddddd;
+  border-top: 1px solid #1B1B1B;
+  border-bottom: 1px solid #1B1B1B;
 }
 #project-toggles {
   margin-bottom: 0px;
@@ -75,7 +84,7 @@ body {
   font-size: 20px;
 }
 #project-toggles a {
-  color: #a2a2a2;
+  color: #808080;
   letter-spacing: 1px;
 }
 #project-toggles a:hover {
@@ -171,10 +180,11 @@ body {
 .noproject {
   height: auto;
   padding: 20px;
-  background-color: white;
+  background-color: black;
+  color: lightgray;
   text-align: center;
   font-size: 20px;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #1B1B1B;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -201,7 +211,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: white;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #1B1B1B;
   background-image: url('../brokenglass.png');
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -234,7 +244,7 @@ body {
 .description {
   position: relative;
   padding: 20px;
-  background-color: rgba(120, 120, 120, 0.5);
+  background-color: rgba(20, 20, 20, 0.5);
   color: white;
   z-index: 1;
   font-size: 20px;
@@ -308,7 +318,7 @@ body {
 }
 .active .gallery {
   opacity: 1;
-  background-color: rgba(120, 120, 120, 0.5);
+  background-color: rgba(20, 20, 20, 0.5);
 }
 .active .gallery iframe {
   display: block;
@@ -389,12 +399,31 @@ iframe.website {
   content: "\f105";
 }
 #contact-container {
-  background-color: #52b74f;
-  color: white;
+  background-color: #1A1A1A;
+  color: #43b117;
   text-align: center;
   padding: 50px;
   margin: 0px;
   width: 100%;
+}
+.email:before {
+  font-family: fontawesome;
+  content: "\f0e0";
+  margin-right: 8px;
+  font-size: 20px;
+  color: #d3d3d3;
+}
+.git a,
+.email a {
+  color: lightgray;
+  font-size: 20px;
+}
+.git:before {
+  font-family: fontawesome;
+  content: "\f092";
+  margin-right: 8px;
+  font-size: 20px;
+  color: #d3d3d3;
 }
 #about-container {
   text-align: right;
@@ -427,23 +456,6 @@ iframe.website {
   vertical-align: middle;
   display: inline-block;
   padding-left: 30px;
-}
-.email:before {
-  font-family: fontawesome;
-  content: "\f0e0";
-  margin-right: 8px;
-  font-size: 20px;
-}
-.git a,
-.email a {
-  color: white;
-  font-size: 20px;
-}
-.git:before {
-  font-family: fontawesome;
-  content: "\f092";
-  margin-right: 8px;
-  font-size: 20px;
 }
 .isotope-item {
   z-index: 2;
@@ -490,7 +502,7 @@ iframe.website {
   width: 5px;
 }
 ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 30px #52b74f;
+  -webkit-box-shadow: inset 0 0 30px #43b117;
 }
 .description::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.7);
