--- a/css/style.less
+++ b/css/style.less
@@ -3,7 +3,8 @@
 @main-dark-color: #43b117;
 @secondary-oolor: #2778c3;
 @secondary-light-oolor: #5f8dc3;
-@null-color: #a2a2a2;
+@null-color: gray;
+@overlay-color: rgba(20, 20, 20, 0.5);
 @font-face {
   font-family: NewNeue;
   src: url("../font/HelveticaNeueLight.ttf");
@@ -27,8 +28,8 @@ html, body {
   user-select: none;
   font-family: 'Alegreya Sans', sans-serif;
   font-weight: 300;
-
-
+  background-color: black;
+  color: lightgray;
 }
 #greeting, #project-toggles, .noproject, .description > div, .description > a, #contact-container{
   text-transform:lowercase;
@@ -53,16 +54,26 @@ html, body {
 }
 #greeting {
   font-size: 25px;
+  color: @null-color;
 }
 #hello {
   font-size: 50px;
 }
+.firstname {
+  color: white;
+}
+.lastname {
+  color: @main-dark-color;
+}
 #project-outer-container {
-  background-color: #eeeeee;
+  //background-color: #eeeeee;
+  background-color: #0F0F0F;
   padding-top: 30px;
   padding-bottom: 30px;
-  border-top: 1px solid #dddddd;
-  border-bottom: 1px solid #dddddd;
+  //border-top: 1px solid #dddddd;
+  //border-bottom: 1px solid #dddddd;
+  border-top: 1px solid #1B1B1B;
+  border-bottom: 1px solid #1B1B1B;
 }
 #project-toggles {
   margin-bottom: 0px;
@@ -185,10 +196,13 @@ html, body {
   //display: none;
   height: auto;
   padding: 20px;
-  background-color: white;
+  //background-color: white;
+  background-color:black;
+  color: lightgray;
   text-align: center;
   font-size: 20px;
-  border: 1px solid #e7e7e7;
+  //border: 1px solid #e7e7e7;
+  border: 1px solid #1B1B1B;
   margin-top:20px;
   margin-bottom:20px;
 }
@@ -215,7 +229,8 @@ html, body {
   height: 100%;
   width: 100%;
   background-color: white;
-  border: 1px solid #e7e7e7;
+  //border: 1px solid #e7e7e7;
+  border: 1px solid #1B1B1B;
   background-image: url('../brokenglass.png');
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -253,7 +268,7 @@ html, body {
 .description {
   position: relative;
   padding: 20px;
-  background-color: rgba(120, 120, 120, 0.5);
+  background-color: @overlay-color;
   color: white;
   z-index: 1;
   font-size: 20px;
@@ -345,7 +360,7 @@ html, body {
 .active .gallery {
   //display: block;
   opacity: 1;
-  background-color: rgba(120, 120, 120, 0.5);
+  background-color: @overlay-color;
   //height: 478px;
 }
 .active .gallery iframe {
@@ -427,12 +442,32 @@ iframe.website {
   content: "\f105";
 }
 #contact-container {
-  background-color: @main-color;
-  color: white;
+  //background-color: @main-color;
+  background-color: #1A1A1A;
+  //color: white;
+  color: @main-dark-color;
   text-align: center;
   padding: 50px;
   margin: 0px;
   width: 100%;
+}
+.email:before {
+  font-family:fontawesome;
+  content: "\f0e0";
+  margin-right: 8px;
+  font-size: 20px;
+  color: lightgray
+}
+.git a, .email a{
+  color: lightgray;
+  font-size: 20px;
+}
+.git:before {
+  font-family:fontawesome;
+  content: "\f092";
+  margin-right: 8px;
+  font-size: 20px;
+  color: lightgray
 }
 #about-container {
   text-align: right;
@@ -465,22 +500,6 @@ iframe.website {
   vertical-align: middle;
   display: inline-block;
   padding-left: 30px;
-}
-.email:before {
-  font-family:fontawesome;
-  content: "\f0e0";
-  margin-right: 8px;
-  font-size: 20px;
-}
-.git a, .email a{
-  color: white;
-  font-size: 20px;
-}
-.git:before {
-  font-family:fontawesome;
-  content: "\f092";
-  margin-right: 8px;
-  font-size: 20px;
 }
 
 
@@ -538,7 +557,7 @@ iframe.website {
   width: 5px;
 }
 ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 30px @main-color;
+  -webkit-box-shadow: inset 0 0 30px @main-dark-color;
 }
 .description::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.7);
