--- a/css/style.less
+++ b/css/style.less
@@ -31,7 +31,7 @@ html, body {
   background-color: black;
   color: lightgray;
 }
-#greeting, #project-toggles, .noproject, .description > div, .description > a, #contact-container{
+#greeting, #project-toggles, .noproject, .description > div, .description > a, #contact-container, #floater{
   text-transform:lowercase;
   font-family: 'Quicksand', sans-serif;
 }
@@ -49,7 +49,7 @@ html, body {
   font-size: 80px;
 }
 #greeting-container {
-  margin-top: 80px;
+  margin-top: 40px;
   padding-bottom: 20px;
 }
 #greeting {
@@ -75,29 +75,38 @@ html, body {
   border-top: 1px solid #1B1B1B;
   border-bottom: 1px solid #1B1B1B;
 }
+#floater {
+  position: fixed;
+  width:100%;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-top: 1px solid #1b1b1b;
+  background-color: #0F0F0F;
+  z-index: 20;
+}
 #project-toggles {
   margin-bottom: 0px;
 }
-#project-toggles ul {
+#project-toggles ul, #floater ul {
   padding-left: 0px;
   text-align: center;
 }
-#project-toggles li {
+#project-toggles li, #floater li {
   display: inline-block;
   padding-left: 15px;
   padding-right: 15px;
   font-size: 20px;
 }
-#project-toggles a {
+#project-toggles a, #floater a {
   color: @null-color;
   letter-spacing: 1px;
 }
-#project-toggles a:hover {
+#project-toggles a:hover, #floater a:hover {
   text-decoration: none;
   cursor: pointer;
   //color: @main-light-color;
 }
-#project-toggles .active {
+#project-toggles .active, #floater .active {
   color: @main-dark-color;
   text-shadow: 0.5px 0px 0px @main-dark-color;
 }
