--- a/css/style.less
+++ b/css/style.less
@@ -186,7 +186,7 @@ html, body {
   left: 0px;
   content: ''*/
 }
-.painting {
+/*.painting {
   z-index: 0!important;
 }
 .photography{
@@ -200,7 +200,7 @@ html, body {
 }
 .film {
   z-index: 4!important;
-}
+}*/
 .noproject {
   //display: none;
   height: auto;
