less buggy toggles stick to top of the page

--- a/css/style.less
+++ b/css/style.less
@@ -76,7 +76,7 @@ html, body {
   border-bottom: 1px solid #1B1B1B;
 }
 #floater {
-  position: fixed;
+  position: absolute;
   width:100%;
   padding-top: 30px;
   padding-bottom: 20px;
