--- a/css/style.less
+++ b/css/style.less
@@ -353,6 +353,7 @@ html, body {
   //overflow: auto;
   //z-index: 1;
   //margin-top:-8px;
+  transition: opacity 0.3s;
 }
 .active .gallery {
   //display: block;
@@ -386,14 +387,22 @@ iframe.website {
   height: 128%;
   width: 126.6666%;
 }
-@media(max-width: 767px) {
+@media(max-width: 991px) {
+  .item1 .project-content .description {
+    width: 100%;
+    right: 100%;
+  }
+  .item1 .project-content:hover .desc-bg-container {
+    width: 100%;
+    margin-right: 0%;
+  }
   .item2 .project-content .description {
-    width: 90%;
-    right: 90%;
+    width: 70%;
+    right: 70%;
   }
   .item2 .project-content:hover .desc-bg-container {
-    width: 90%;
-    margin-right: 10%;
+    width: 70%;
+    margin-right: 30%;
   }
   .active-desc {
     width: 100%!important;
@@ -418,6 +427,66 @@ iframe.website {
   }
   .active.project {
     height: 800px;
+  }
+}
+@media(max-width: 767px) {
+  .item1 .project-content .description {
+    width: 50%;
+    right: 50%;
+  }
+  .item1 .project-content:hover .desc-bg-container {
+    width: 50%;
+    margin-right: 50%;
+  }
+  .item2 .project-content .description {
+    width: 50%;
+    right: 50%;
+  }
+  .item2 .project-content:hover .desc-bg-container {
+    width: 50%;
+    margin-right: 50%;
+  }
+  .active-desc {
+    width: 100%!important;
+    right: 0%!important;
+    overflow-y:auto!important;
+    height: 40%!important;
+  }
+  .active-desc-bg-container {
+    width: 100%!important;
+    margin-right: 0%!important;
+    height: 100%;
+    //top: -50%;
+    top: 10px;
+    padding-bottom: 20px;
+    position: absolute;
+  }
+  .active .gallery {
+    width: 100%;
+    height: 60%;
+    top: 0px;
+    left: 0px;
+  }
+  .active.project {
+    height: 800px;
+  }
+}
+@media(max-width: 440px) {
+  .item1 .project-content .description {
+    width: 100%;
+    right: 100%;
+  }
+  .item1 .project-content:hover .desc-bg-container {
+    width: 100%;
+    margin-right: 0%;
+  }
+  .item2 .project-content .description {
+    width: 100%;
+    right: 100%;
+  }
+  .item2 .project-content:hover .desc-bg-container {
+    width: 100%;
+    margin-right: 0%;
   }
 }
 
