--- a/css/style.less
+++ b/css/style.less
@@ -49,15 +49,17 @@ html, body {
   font-size: 80px;
 }
 #greeting-container {
-  margin-top: 40px;
+  margin-top: 80px;
   padding-bottom: 20px;
+  padding-bottom: 0px;
 }
 #greeting {
   font-size: 25px;
   color: @null-color;
+  text-align: center;
 }
 #hello {
-  font-size: 50px;
+  font-size: 60px;
 }
 .firstname {
   color: white;
