first blog post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <span class="email"><a href="austineng.inr@gmail.com">austineng.inr@gmail.com</a></span>
+            <span class="email"><a href="mailto:austineng.inr@gmail.com">austineng.inr@gmail.com</a></span>
             <br />
             <span class="git"><a href="http://github.com/austinEng">http://github.com/austinEng</a></span>
             <br />
