--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css" />
-<link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/blog/feed.xml" />
 
 {% if page.custom_css %}
   {% for stylesheet in page.custom_css %}
