--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,15 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     {% if page.excerpt %}
-    <meta name="description" content="{{ page.excerpt| strip_html }}" />
-    <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+    <meta name="description" content="{{ page.excerpt| strip_html| truncate: 160 }}" />
+    <meta property="og:description" content="{{ page.excerpt| strip_html| truncate: 160  }}" />
     {% else %}
     <meta name="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
     <meta name="author" content="{{ site.name }}" />
 
-    {% if page.title %}
+    {% if page.full_title %}
+    <meta property="og:title" content="{{ page.full_title }}" />
+    <meta property="twitter:title" content="{{ page.full_title }}" />
+    {% elsif page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
