--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,14 @@
   <div class="container" id="greeting-container">
     <div class="row" id="greeting">
         <div class="col-lg-12">
-            <h1><a id="hello" href="/"><span class="firstname">Austin</span> <span class="lastname">Eng</span></a></h1>
-            <!--<br>
-            <span>&#8212 Digital Media Porfolio</span>-->
+            <h1 style="float: left"><a id="hello" href="/"><span class="firstname">Austin</span> <span class="lastname">Eng</span></a></h1>
+            <ul id="nav-links">
+              <li><a href="{{ site.baseurl }}/">Projects</a></li>
+              <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+              <li style="display:none"><a href="{{ site.baseurl }}/reel">Reel</a></li>
+              <li style="display:none"><a href="{{ site.baseurl }}/resume">Resume</a></li>
+              <li style="display:none"><a href="{{ site.baseurl }}/about">About</a></li>
+            </ul>
         </div>
     </div>
   </div>
