--- a/css/blog.scss
+++ b/css/blog.scss
@@ -60,3 +60,23 @@ a:hover {
     text-decoration: none;
   }
 }
+
+.author {
+  color: $null-color;
+}
+
+.blog-post {
+  position: relative;
+  & + .blog-post {
+    margin-top: 100px;
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 1px;
+      left: 0px;
+      top: -40px;
+      background-color: $null-color;
+    }
+  }
+}
