--- a/css/main.scss
+++ b/css/main.scss
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 #greeting {
   font-size: 25px;
   color: $null-color;
-  text-align: center;
+  //text-align: center;
 }
 #hello {
   white-space: nowrap;
@@ -703,4 +703,29 @@ iframe.website {
 }
 .description::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.7);
+}
+
+
+#nav-links {
+  margin: 0;
+  padding: 0;
+  padding-top: 32px;
+  float: right;
+  li {
+    list-style: none;
+    display: inline-block;
+    a {
+      color: $main-light-color;
+      &:hover {
+        color: white;
+        text-decoration: none;
+      }
+    }
+    & + li {
+      &::before {
+        content: "\00B7";
+        padding-right: 6px;
+      }
+    }
+  }
 }
