--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -19,3 +19,5 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+
+    <meta name="keywords" content="{{page.keywords | join: ', '}}"/>
