--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
               <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
               <li style="display:none"><a href="{{ site.baseurl }}/reel">Reel</a></li>
               <li style="display:none"><a href="{{ site.baseurl }}/resume">Resume</a></li>
-              <li style="display:none"><a href="{{ site.baseurl }}/about">About</a></li>
+              <li><a href="{{ site.baseurl }}/about">About</a></li>
             </ul>
         </div>
     </div>
