--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
     <meta name="author" content="{{ site.name }}" />
+    <meta name="site_name" property="og:site_name" content="{{ site.name }}" />
 
     {% if page.full_title %}
     <meta property="og:title" content="{{ page.full_title }}" />
@@ -21,3 +22,4 @@
     {% endif %}
 
     <meta name="keywords" content="{{page.keywords | join: ', '}}"/>
+    <meta name="url" property="og:url" content="{{ page.url }}"/>
