--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 custom_css: resume
+excerpt: Austin Eng, Digital Media Design, Computer Graphics, Computer Science, University of Pennyslvania
 keywords: [resume, austin eng, digital media design, computer graphics, computer science, animation, programming, engineering]
 ---
 
