meta images and color

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -23,3 +23,7 @@
 
     <meta name="keywords" content="{{page.keywords | join: ', '}}"/>
     <meta name="url" property="og:url" content="{{ page.url }}"/>
+
+    <meta property="og:image" content="//austineng.github.io/logo.png"/>
+    <meta property="twitter:image" content="//austineng.github.io/logo.png"/>
+    <meta name="theme-color" content="#43b117">
