--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
             <ul id="nav-links">
               <li><a href="{{ site.baseurl }}/">Projects</a></li>
               <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-              <li><a href="{{ site.baseurl }}/resume">Resume</a></li>
+              <li><a href="{{ site.baseurl }}/austin_eng_resume.pdf">Resume</a></li>
               <li><a href="{{ site.baseurl }}/about">About</a></li>
             </ul>
         </div>
