--- a/css/main.scss
+++ b/css/main.scss
@@ -589,25 +589,60 @@ iframe.website {
   margin: 0px;
   width: 100%;
 }
-#contact-container a{
+#contact-container a {
   color: lightgray;
   font-size: 20px;
+  &:hover {
+    text-decoration: none;
+    color: white;
+  }
 }
-#contact-container span:before {
+#contact-container span a:before {
   font-family:fontawesome;
-  margin-right: 8px;
+  margin-right: 4px;
+  margin-left: 4px;
   font-size: 20px;
   color: lightgray
 }
-.email:before {
-  content: "\f0e0";
+.email {
+  a:before {
+    content: "\f0e0";
+  }
+  a:after {
+    content: "austineng.inr@gmail.com";
+  }
 }
-.git:before {
-  content: "\f092";
+
+.git {
+  a:before {
+    content: "\f092";
+  }
+  a:after {
+    content: "http://github.com/austinEng";
+  }
 }
-.linkedin:before {
-  content: "\f08c";
+.linkedin {
+  a:before {
+    content: "\f08c";
+  }
+  a:after {
+    content: "https://www.linkedin.com/in/austineng";
+  }
 }
+//@media(max-width: 767px) {
+  #contact-container span a:before {
+    font-size: 50px;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+  br {
+    display: none;
+  }
+  #contact-container span a:after {
+    display: none; 
+  }
+//}
+
 #about-container {
   text-align: right;
   padding-top: 30px;
