--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
             <h1 style="float: left"><a id="hello" href="/"><span class="firstname">Austin</span> <span class="lastname">Eng</span></a></h1>
             <ul id="nav-links">
               <li><a href="{{ site.baseurl }}/">Projects</a></li>
+              <li><a href="{{ site.baseurl }}/reel">Reel</a></li>
               <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
               <li><a href="{{ site.baseurl }}/austin_eng_resume.pdf">Resume</a></li>
               <li><a href="{{ site.baseurl }}/about">About</a></li>
